<resources>
    <string name="app_name">CountIndicator</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="count_indicator">CountIndicator</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <string name="next_level" translatable="false">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_score">Score</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="ball" translatable="false">B</string>
    <string name="strike" translatable="false">S</string>
    <string name="out" translatable="false">O</string>
    <string name="inning_default">Inning 1</string>
    <string name="inning">Inning %1$d</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="score_default">Score 0</string>
    <string name="score">Score %1$d</string>
    <string name="clear">Clear</string>

</resources>
